# github-news

./: .gitignore  README.md  pyproject.toml
.antigravity/: instructions.md
.github/workflows/: check_releases.yml
.junie/: guidelines.md
data/: known_releases.json  latest_report.md  repos_list.csv
src/github_news/: __init__.py  check_releases.py  discord_client.py  list_models.py  main.py
